--- a/src/app/components/quiz/quiz.component.css
+++ b/src/app/components/quiz/quiz.component.css
@@ -20,13 +20,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 1px solid #4224d9;
     border-radius: 6px;
-    background-color: #654ED2;
+    background-color: #21A0A0;
     width: 100%;
     height: 200px;
     font-size: 22px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin-bottom: 20px;
 }
 
@@ -42,7 +40,7 @@
     transition: .5s;
     background-color: transparent;
     border-radius: 8px;
-    border: 1px solid #18ab29;
+    border: 1px solid #21A0A0;
     width: 50%;
     display: inline-block;
     cursor: pointer;
@@ -54,7 +52,7 @@
 
 .btn__option:hover {
     transition: .5s;
-    background-color: #5cbf2a;
+    background-color: #21A0A0;
 }
 
 .btn__option:active {
@@ -65,12 +63,21 @@
 .quiz__results {
     width: 100%;
     height: 350px;
-    background-color: #1F0539;
+    background-color: #21A0A0;
     border-radius: 10px;
     padding: 30px;
+    
 
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.quiz__results > h1 {
+    margin-bottom: 20px;
+}
+
+.quiz__results > p {
+    font-size: 28px;
 }
